--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^0.12.0+2
   # Local cache
   shared_preferences: ^0.5.3+4
+  # Swap the connectivity package for this
+  data_connection_checker: ^0.3.4
 
 dev_dependencies:
   flutter_test:
